# apertium-ckb

./: .gitattributes  AUTHORS  Makefile  Makefile.am  README  apertium-ckb.ckb.acx  apertium-ckb.ckb.dix  apertium-ckb.ckb.lexc  apertium-ckb.ckb.rlx  apertium-ckb.pc.in  configure.ac  i_to_p.awk.in  inline_e.awk.in  modes.xml  sustituye_caracteres.awk.in
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: phrasebook.vislcg.txt  qalamara.txt
texts/puupankki/: puupankki.ckb.conllu
